--- a/PocWorker/PocWorker.csproj
+++ b/PocWorker/PocWorker.csproj
@@ -18,6 +18,8 @@
         <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.7.0" />
         <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.7.1" />
         <PackageReference Include="OpenTelemetry.Instrumentation.EntityFrameworkCore" Version="1.0.0-beta.10" />
+        <PackageReference Include="OpenTelemetry.Instrumentation.SqlClient" Version="1.7.0-beta.1" />
+        <PackageReference Include="Serilog.Sinks.OpenTelemetry" Version="2.0.0-dev-00270" />
     </ItemGroup>
 
     <ItemGroup>
