--- a/PocApi/PocApi.csproj
+++ b/PocApi/PocApi.csproj
@@ -17,7 +17,9 @@
         <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.7.0" />
         <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.7.1" />
         <PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.7.1" />
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
+        <PackageReference Include="Serilog" Version="3.1.1" />
+        <PackageReference Include="Serilog.Sinks.OpenTelemetry" Version="1.2.0" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     </ItemGroup>
 
     <ItemGroup>
