--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,9 +30,9 @@ services:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.13.0
     environment:
       - discovery.type=single-node
+      - xpack.monitoring.enabled=true
     ports:
       - 9200:9200
-      - 9300:9300
   kibana:
       image: docker.elastic.co/kibana/kibana:7.13.0
       environment:
