--- a/PocProducer/PocProducer.csproj
+++ b/PocProducer/PocProducer.csproj
@@ -27,4 +27,9 @@
         <Link>.dockerignore</Link>
       </Content>
     </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\QueueContracts\QueueContracts.csproj" />
+      <ProjectReference Include="..\Repository\Repository.csproj" />
+    </ItemGroup>
 </Project>
