--- a/PocConsumer/Dockerfile
+++ b/PocConsumer/Dockerfile
@@ -4,17 +4,17 @@ WORKDIR /app
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["PocWorker/PocWorker.csproj", "PocWorker/"]
-RUN dotnet restore "PocWorker/PocWorker.csproj"
+COPY ["PocConsumer/PocConsumer.csproj", "PocConsumer/"]
+RUN dotnet restore "PocConsumer/PocConsumer.csproj"
 COPY . .
-WORKDIR "/src/PocWorker"
-RUN dotnet build "PocWorker.csproj" -c $BUILD_CONFIGURATION -o /app/build
+WORKDIR "/src/PocConsumer"
+RUN dotnet build "PocConsumer.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "PocWorker.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "PocConsumer.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "PocWorker.dll"]
+ENTRYPOINT ["dotnet", "PocConsumer.dll"]
