--- a/otel-dotnet.env
+++ b/otel-dotnet.env
@@ -6,3 +6,4 @@ DOTNET_ADDITIONAL_DEPS="/otel-dotnet-auto/AdditionalDeps"
 DOTNET_SHARED_STORE="/otel-dotnet-auto/store"
 DOTNET_STARTUP_HOOKS="/otel-dotnet-auto/net/OpenTelemetry.AutoInstrumentation.StartupHook.dll"
 OTEL_DOTNET_AUTO_HOME="/otel-dotnet-auto"
+OTEL_DOTNET_AUTO_TRACES_ADDITIONAL_SOURCES="Poc.*"
