--- a/otel-dotnet.env
+++ b/otel-dotnet.env
@@ -7,3 +7,5 @@ DOTNET_SHARED_STORE="/otel-dotnet-auto/store"
 DOTNET_STARTUP_HOOKS="/otel-dotnet-auto/net/OpenTelemetry.AutoInstrumentation.StartupHook.dll"
 OTEL_DOTNET_AUTO_HOME="/otel-dotnet-auto"
 OTEL_DOTNET_AUTO_TRACES_ADDITIONAL_SOURCES="Poc.*"
+OTEL_DOTNET_AUTO_TRACES_SQLCLIENT_INSTRUMENTATION_ENABLED="false"
+OTEL_DOTNET_AUTO_ENTITYFRAMEWORKCORE_SET_DBSTATEMENT_FOR_TEXT="true"
